--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,37 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* styles.css */
+
+@font-face {
+  font-family: 'Pangram';
+  src:  url('./fonts/Pangram-Black.otf') ;
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pangram';
+  src:  url('./fonts/Pangram-Light.otf') ;
+  font-weight: 300;
+  font-style: normal;
+
+}
+
+@font-face {
+  font-family: 'Pangram';
+  src: url('./fonts/Pangram-Medium.otf') ;
+  font-weight: 500;
+  font-style: normal;
+
+}
+
+
+
+
 body {
   @apply leading-[normal] m-0;
 }
@@ -10,4 +40,3 @@ body {
 ::after {
   border-width: 0;
 }
-
