--- a/src/index.css
+++ b/src/index.css
@@ -3,30 +3,31 @@
 @tailwind components;
 @tailwind utilities;
 
-
-/* styles.css */
-
 @font-face {
   font-family: 'Pangram';
-  src:  url('./fonts/Pangram-Black.otf') format('opentype') ;
+  src: url('./fonts/Pangram-Black.woff2') format('woff2'),
+      url('./fonts/Pangram-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Pangram';
-  src:  url('./fonts/Pangram-Light.otf') format('opentype');
+  src: url('./fonts/Pangram-Light.woff2') format('woff2'),
+      url('./fonts/Pangram-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
-
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Pangram';
-  src: url('./fonts/Pangram-Medium.otf') format('opentype');
+  src: url('./fonts/Pangram-Medium.woff2') format('woff2'),
+      url('./fonts/Pangram-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
-
+  font-display: swap;
 }
 
 
